# IHaskell

./: cabal.project  ihaskell.cabal
ihaskell-display/ihaskell-gnuplot/: stack.yaml
ihaskell-display/ihaskell-plot/: stack.yaml
src/IHaskell/Eval/: Evaluate.hs
static-canvas/: static-canvas.cabal
